syntax = "proto3";

package history;

option go_package = "whoami-server/protogen/golang/history";

import "google/protobuf/empty.proto";

service QuizCompletionHistoryService {
  rpc Add(stream QuizCompletionHistoryItem) returns (stream QuizCompletionHistoryItem) {}
  rpc GetAll(google.protobuf.Empty) returns (stream QuizCompletionHistoryItem) {}
  rpc GetByUserID(GetByUserIDRequest) returns (stream QuizCompletionHistoryItem) {}
}

message QuizCompletionHistoryItem {
  int64 id = 1;
  int64 user_id = 2;
  int64 quiz_id = 3;
  string quiz_result = 4;
}

message GetByUserIDRequest {
  int64 user_id = 1;
}
